.anchor is positioned correctly on IE

--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ nav #socials-list {
     flex-grow: 0;
 }
 
-a.anchor {
+.anchor {
     display: inline-block;
     width: 0;
     height: 0;
@@ -305,6 +305,10 @@ section .img-container img {
 }
 
 /* CSS for browsers that don’t support intersection observers. */
+
+.no-intersection-observer .anchor {
+    width: 100%;
+}
 
 .no-intersection-observer .default-main-image-picture {
     display: none;
